--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <link rel="icon" type="image/png" href="/place-marker.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Беларуская мікратапаніміка</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7M6TLLZ206"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7M6TLLZ206');
+    </script>
   </head>
   <body>
     <div id="app"></div>
